--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <h1>Let's Play!</h1>
         <div class="board-outline">
             <div class="board-border">
                 <div class="inner-border">
